dataset1235/2025-2/1153765216/users/3852364061/executions/3138746197_3221148872.log
== RUN (2025-08-12 23:51:16)
-- CODE: 
40+35=
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    40+35=
    ^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    40+35=
    ^^^^^
SyntaxError: cannot assign to expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 00:11:50)
-- CODE: 
print(40 + 35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 00:13:49)
-- CODE: 
print(30+40/20*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
34.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
34.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 00:13:00)
-- CODE: 
print(30+40/20.1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
31.99004975124378
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
31.99004975124378
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 00:12:19)
-- CODE: 
print(30+40)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
70
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
70
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 00:11:19)
-- CODE: 
print(40 + 35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 01:57:45)
-- CODE: 
print(30+40/20*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
34.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
34.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 00:10:54)
-- CODE: 
print("40 + 35")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
40 + 35
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
40 + 35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:53:48)
-- CODE: 
print("30+40=")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
30+40=
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
30+40=
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 00:11:57)
-- CODE: 
print(40 + 35)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 00:12:43)
-- CODE: 
print(30+40/20)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
32.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
32.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 00:10:40)
-- CODE: 
print("40 + 30")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
40 + 30
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
40 + 30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 00:10:28)
-- CODE: 
print("40+30")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
40+30
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
40+30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:55:44)
-- CODE: 

print40+35("")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print40+35("")
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print40+35("")
    ^^^^^^^
NameError: name 'print40' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
XXXX:2: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print40+35("")
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print40+35("")
    ^^^^^^^
NameError: name 'print40' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
